src/screens/classification/ClassificationDrawMode/ClassificationDrawModeLayout.css
.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 16px 0;
    gap: 2rem;
    width: 100%;

}

.canvas-layout-container {
    width: 90%;
    aspect-ratio: 1 / 1;
    max-width: 500px;
    max-height: 500px;
    display: flex;
    justify-content: center;
}


.container .ant-btn {
    width: 60%;
    height: 3rem;
    font-size: 1.1rem;
}

.predict-list {
    width: 100%;
    max-width: 100vw;
    min-width: 0;
    touch-action: pan-x;
}

.buttons-wrapper .ant-btn {
    height: 3rem;
    font-size: 1.1rem;
    width: 100%;
}

.container.extended {
    padding: 0 1px;
}

.canvas-layout-container.extended {
    width: 100%;
    height: 50vh;
    aspect-ratio: unset;
    max-width: unset;
    max-height: unset;
    padding: 1px;
}

